// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContentChannel gets a list of content channels 1`] = `
Object {
  "data": Object {
    "contentChannels": Array [
      Object {
        "__typename": "ContentChannel",
        "childContentChannels": null,
        "childContentItemsConnection": Object {
          "edges": Array [
            Object {
              "cursor": "b487224762b030f470967f45d7205823",
              "node": Object {
                "__typename": "UniversalContentItem",
                "id": "UniversalContentItem:559b23fd0aa90e81b1c023e72e230fa1",
              },
            },
          ],
        },
        "description": "Some description",
        "iconName": "text",
        "id": "ContentChannel:744e1011cfa6a90bb2fbfeb3ecdc1451",
        "name": "My super cool content channel",
      },
    ],
  },
}
`;

exports[`ContentChannel gets a single content channel when querying by root node 1`] = `
Object {
  "data": Object {
    "node": Object {
      "__typename": "ContentChannel",
      "childContentChannels": null,
      "childContentItemsConnection": Object {
        "edges": Array [
          Object {
            "cursor": "b487224762b030f470967f45d7205823",
            "node": Object {
              "__typename": "UniversalContentItem",
              "id": "UniversalContentItem:559b23fd0aa90e81b1c023e72e230fa1",
            },
          },
        ],
      },
      "description": "Some description",
      "iconName": "text",
      "id": "ContentChannel:744e1011cfa6a90bb2fbfeb3ecdc1451",
      "name": "My super cool content channel",
    },
  },
}
`;
